Work on demo site

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,10 +2,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>react-play-button 0.1.0 Demo</title>
+  <title>React Play Button - Joshua Comeau Open Source</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="demo.css" rel="stylesheet"></head>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+</head>
 <body>
   <div id="demo"></div>
-<script src="demo.js"></script></body>
+</body>
 </html>
